use wrappers' valueOf method instead of constructor